--- a/.github/workflows/stock_task.yml
+++ b/.github/workflows/stock_task.yml
@@ -4,7 +4,10 @@ name: Run Daily Stock Analysis
 
 on:
   schedule:
-    - cron: '0 12 * * *' # 每天 12:00 UTC (北京时间 20:00) 运行
+    # 每天北京时间晚上 8 点 (20:00) 运行
+    # cron 表达式使用的是 UTC 时间, '0 12 * * *' 对应 12:00 UTC
+    - cron: '0 12 * * *'
+  # 这也允许你从 GitHub Actions 页面手动触发此工作流，方便测试
   workflow_dispatch:
 
 jobs:
@@ -12,24 +15,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 第 1 步：检出你的代码仓库
       - name: Checkout repository code
         uses: actions/checkout@v4
 
+      # 第 2 步：设置 Python 3.x 环境
       - name: Set up Python environment
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
+      # 第 3 步：安装 requirements.txt 中定义的所有依赖库
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 第 4 步：运行主脚本，并注入所有需要的机密信息
       - name: Run Analysis and Send Email
         env:
-          # 关键: 把所有 Secrets 都注入到环境变量中
+          # --- 关键部分：把所有 Secrets 注入到环境变量中 ---
+
+          # 注入邮箱地址和密码
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+
+          # 注入代理服务器地址，让脚本可以通过你的服务器联网
+          HTTP_PROXY: ${{ secrets.PROXY_URL }}
+          HTTPS_PROXY: ${{ secrets.PROXY_URL }}
         run: |
           python low_price.py
