--- a/.github/workflows/stock_task.yml
+++ b/.github/workflows/stock_task.yml
@@ -1,13 +1,12 @@
-# .github/workflows/stock_task.yml
+# .github/workflows/stock_task.yml (智能版)
 
 name: Run Daily Stock Analysis
 
 on:
   schedule:
-    # 每天北京时间晚上 8 点 (20:00) 运行
-    # cron 表达式使用的是 UTC 时间, '0 12 * * *' 对应 12:00 UTC
-    - cron: '0 12 * * *'
-  # 这也允许你从 GitHub Actions 页面手动触发此工作流，方便测试
+    # 修改：只在周一到周五的 12:00 UTC (北京时间 20:00) 运行
+    - cron: '0 12 * * 1-5'
+  # 保持手动触发功能，方便随时测试
   workflow_dispatch:
 
 jobs:
@@ -15,34 +14,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 第 1 步：检出你的代码仓库
       - name: Checkout repository code
         uses: actions/checkout@v4
 
-      # 第 2 步：设置 Python 3.x 环境
       - name: Set up Python environment
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 第 3 步：安装 requirements.txt 中定义的所有依赖库
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          # 我们现在从更新后的 requirements.txt 安装所有依赖
           pip install -r requirements.txt
 
-      # 第 4 步：运行主脚本，并注入所有需要的机密信息
       - name: Run Analysis and Send Email
         env:
-          # --- 关键部分：把所有 Secrets 注入到环境变量中 ---
-
-          # 注入邮箱地址和密码
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-
-          # 注入代理服务器地址，让脚本可以通过你的服务器联网
           HTTP_PROXY: ${{ secrets.PROXY_URL }}
           HTTPS_PROXY: ${{ secrets.PROXY_URL }}
         run: |
-          python low_price_half_csv.py
+          python low_price_half_workday.py
