Change script from low_price_half_workday.py to low_price_half_csv.py

--- a/.github/workflows/stock_task.yml
+++ b/.github/workflows/stock_task.yml
@@ -36,4 +36,4 @@ jobs:
           HTTP_PROXY: ${{ secrets.PROXY_URL }}
           HTTPS_PROXY: ${{ secrets.PROXY_URL }}
         run: |
-          python low_price_half_workday.py
+          python low_price_half_csv.py
